# Rust-Compiler

./: .gitignore  README.md  index.html  integrator.m  lexer  lexer.rs  souce_code.txt
backend/: Cargo.toml
backend/src/IR/: IR.rs  llvm_ir.rs
examples/: hello.rs
mini_rust_compiler/: Cargo.toml  grammar.txt  test  test.asm  test.rs  test2.rs  test_if  test_if.asm  test_if.rs  test_if_simple.rs  test_vec.asm  test_vec.rs  test_vec_clean  test_vec_clean.asm  test_vec_clean.rs  test_vec_methods  test_vec_methods.asm  test_vec_methods.rs  test_vec_simple  test_vec_simple.asm  test_vec_simple.rs
mini_rust_compiler/mini_rust_compiler/: Cargo.toml  README.md
mini_rust_compiler/mini_rust_compiler/examples/: hello_world.rs  test.rs
mini_rust_compiler/mini_rust_compiler/src/: code_generator.rs  lexer.rs  lib.rs  main.rs  parser.rs
mini_rust_compiler/mini_rust_compiler/tests/: compiler_tests.rs  integration_tests.rs
mini_rust_compiler/src/: code_generator.rs  error_handler.rs  lexer.rs  main.rs  parser.rs
rust_compiler/: 2_3_5.dot  2___3.dot  2___3___4.dot  2____3___4___5____6.dot  Cargo.toml  ast.dot  exemple.rs
rust_compiler/src/: common.rs  lib.rs  main.rs
rust_compiler/src/codegen/: assembly.rs  codegen.rs  mod.rs
rust_compiler/src/lexer/: lexer.rs  mod.rs  tokens.rs
rust_compiler/src/parser/: ast.rs  erreurs.rs  lexer.rs  mod.rs  parser.rs  rust.pest
rust_compiler/src/tests/: mod.rs
rust_compiler/src/typer/: mod.rs  type_checker.rs  types.rs
site/: contact.html  fichiers.html  index.html  installation.html  membres.html  style.css
